// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader should render without crashing 1`] = `
<div
  className="jsx-3132450403 loader"
>
  Child
  <JSXStyle
    css=""
    styleId="3132450403"
  />
</div>
`;

exports[`Loader should render without crashing 2`] = `
<div
  className="jsx-3132450403 loader"
>
  Loading...
  <JSXStyle
    css=""
    styleId="3132450403"
  />
</div>
`;
